# website-analyser

./: .dockerignore  Dockerfile  Dockerfile.backend  README.md  docker-compose.prod.yml  docker-compose.yml  nuxt.config.ts  package.json  pnpm-lock.yaml
app/: app.vue
app/components/sections/: AccessibilitySection.vue  ContentSection.vue  PerformanceSection.vue  SecuritySection.vue  SeoSection.vue  TechSection.vue
app/composables/: useAnalyser.ts
app/pages/: index.vue
app/pages/reports/: [id].vue  index.vue
backend/: database.py  main.py  pyproject.toml
backend/routers/: accessibility.py  content.py  performance.py  reports.py  security.py  seo.py  tech.py
backend/services/: fetcher.py  pdf_builder.py
