[project]
name = "website-analyser-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiosqlite>=0.20.0",
    "fpdf2>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
